fastcarto/fastdb/include/fastdb_payload.h

typedef uint32_t fdb_payload_v1_status_t;
typedef uint32_t fdb_payload_v1_profile_t;
typedef uint64_t fdb_payload_v1_object_handle_t;
typedef struct fdb_payload_v1_spec fdb_payload_v1_spec_t;
typedef struct fdb_payload_v1_blob fdb_payload_v1_blob_t;
typedef struct fdb_payload_v1_error fdb_payload_v1_error_t;
typedef struct fdb_payload_v1_builder fdb_payload_v1_builder_t;
typedef struct fdb_payload_v1_plan fdb_payload_v1_plan_t;
typedef struct fdb_payload_v1_compile_options {
    uint32_t struct_size;
    uint32_t flags;
    uint64_t max_source_bytes;
    uint64_t max_json_values;
    uint32_t max_nesting_depth;
    uint32_t max_entries;
    uint32_t max_components;
    uint32_t max_fields_per_component;
    uint64_t max_total_fields;
    uint64_t reserved[4];
} fdb_payload_v1_compile_options_t;
typedef struct fdb_payload_v1_capabilities {
    uint32_t struct_size;
    uint32_t profile;
    uint64_t semantic_flags;
    uint64_t operation_flags;
    uint64_t codegen_target_flags;
    uint32_t direct_build_status;
    uint32_t reserved32;
    uint64_t reserved64[4];
} fdb_payload_v1_capabilities_t;
typedef struct fdb_payload_v1_builder_options {
    uint32_t struct_size;
    uint32_t flags;
    uint64_t max_value_nodes;
    uint64_t max_list_elements;
    uint64_t max_text_bytes;
    uint64_t max_opaque_bytes;
    uint64_t max_nesting_depth;
    uint64_t max_total_builder_bytes;
    uint64_t reserved[4];
    uint64_t max_graph_objects;
} fdb_payload_v1_builder_options_t;
typedef struct fdb_payload_v1_plan_info {
    uint32_t struct_size;
    uint32_t flags;
    uint64_t total_bytes;
    uint64_t region_count;
    uint64_t logical_value_count;
    uint64_t list_element_count;
    uint64_t text_bytes;
    uint64_t opaque_bytes;
    uint64_t validation_work;
    uint32_t max_alignment;
    uint32_t direct_build_status;
    uint64_t reserved[4];
    uint64_t graph_object_count;
} fdb_payload_v1_plan_info_t;
typedef struct fdb_payload_v1_fixed_run_v1 {
    uint32_t struct_size;
    uint32_t flags;
    const void* data;
    uint64_t data_byte_length;
    uint64_t count;
    uint64_t stride_bytes;
    const uint8_t* validity;
    uint64_t validity_byte_length;
    uint64_t validity_bit_offset;
    uint64_t reserved[4];
} fdb_payload_v1_fixed_run_v1_t;
FDB_PAYLOAD_API uint32_t fdb_payload_v1_abi_version(void);
/* A null output is accepted. Present output receives empty V1 capabilities. */
FDB_PAYLOAD_API void fdb_payload_v1_capabilities_init(
    fdb_payload_v1_capabilities_t* capabilities);
/* Present output receives builder-limit V2 defaults; null is accepted. */
FDB_PAYLOAD_API void fdb_payload_v1_builder_options_init(
    fdb_payload_v1_builder_options_t* options);
/* Present output receives target sizeof and null/zero members; null is accepted. */
FDB_PAYLOAD_API void fdb_payload_v1_fixed_run_init(
    fdb_payload_v1_fixed_run_v1_t* run);
/* Present output receives a zeroed V2 plan-info report; null is accepted. */
FDB_PAYLOAD_API void fdb_payload_v1_plan_info_init(
    fdb_payload_v1_plan_info_t* info);
/*
 * Every fallible function below requires a non-null out_error sink. A null
 * sink returns INVALID_ARGUMENT without touching any value output. With a
 * present sink, the function first clears *out_error and every present value
 * output. Success returns zero, publishes the complete value, and leaves
 * *out_error null. Failure leaves value outputs cleared and publishes one
 * caller-owned, releasable error reference whose code equals the returned
 * status.
 */

/*
 * A builder is unique, thread-confined mutable state and is not thread-safe.
 * Input strings, byte spans, wide-string code units, and fixed-run
 * descriptors/storage are borrowed only for the call. Successful freeze seals
 * the builder and publishes one immutable plan. Ordinary freeze failure
 * publishes no plan and leaves the same builder retryable.
 */
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_builder_create(
    const fdb_payload_v1_spec_t* spec,
    const fdb_payload_v1_builder_options_t* options,
    fdb_payload_v1_builder_t** out_builder,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API void fdb_payload_v1_builder_release(
    fdb_payload_v1_builder_t* builder);
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_builder_entry_begin(
    fdb_payload_v1_builder_t* builder,
    uint32_t entry_index,
    uint64_t value_count,
    fdb_payload_v1_error_t** out_error);
/*
 * Object tokens are non-owning, builder-local authoring values. Zero is
 * invalid; tokens have no retain/release operation and are not wire object IDs.
 */
FDB_PAYLOAD_API fdb_payload_v1_status_t
fdb_payload_v1_builder_object_declare(
    fdb_payload_v1_builder_t* builder,
    uint32_t component_index,
    fdb_payload_v1_object_handle_t* out_object,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t
fdb_payload_v1_builder_object_fill_begin(
    fdb_payload_v1_builder_t* builder,
    fdb_payload_v1_object_handle_t object,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_builder_value_null(
    fdb_payload_v1_builder_t* builder,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_builder_value_bool(
    fdb_payload_v1_builder_t* builder,
    uint8_t value,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_builder_value_u8(
    fdb_payload_v1_builder_t* builder,
    uint8_t value,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_builder_value_u16(
    fdb_payload_v1_builder_t* builder,
    uint16_t value,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_builder_value_u32(
    fdb_payload_v1_builder_t* builder,
    uint32_t value,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_builder_value_i32(
    fdb_payload_v1_builder_t* builder,
    int32_t value,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t
fdb_payload_v1_builder_value_u8n_f64_bits(
    fdb_payload_v1_builder_t* builder,
    uint64_t value,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t
fdb_payload_v1_builder_value_u16n_f64_bits(
    fdb_payload_v1_builder_t* builder,
    uint64_t value,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t
fdb_payload_v1_builder_value_f32_bits(
    fdb_payload_v1_builder_t* builder,
    uint32_t value,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t
fdb_payload_v1_builder_value_f64_bits(
    fdb_payload_v1_builder_t* builder,
    uint64_t value,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_builder_value_str(
    fdb_payload_v1_builder_t* builder,
    const uint8_t* value,
    uint64_t value_size,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_builder_value_wstr(
    fdb_payload_v1_builder_t* builder,
    const uint16_t* value,
    uint64_t value_size,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_builder_value_bytes(
    fdb_payload_v1_builder_t* builder,
    const uint8_t* value,
    uint64_t value_size,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t
fdb_payload_v1_builder_value_fixed_run(
    fdb_payload_v1_builder_t* builder,
    const fdb_payload_v1_fixed_run_v1_t* run,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t
fdb_payload_v1_builder_value_component_begin(
    fdb_payload_v1_builder_t* builder,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t
fdb_payload_v1_builder_value_list_begin(
    fdb_payload_v1_builder_t* builder,
    uint64_t item_count,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t
fdb_payload_v1_builder_value_object(
    fdb_payload_v1_builder_t* builder,
    fdb_payload_v1_object_handle_t object,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_builder_value_ref(
    fdb_payload_v1_builder_t* builder,
    fdb_payload_v1_object_handle_t object,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_builder_freeze(
    fdb_payload_v1_builder_t* builder,
    fdb_payload_v1_plan_t** out_plan,
    fdb_payload_v1_error_t** out_error);
/*
 * Plans are immutable, repeatable, atomically retained handles; retain,
 * release, and info queries are thread-safe. The same plan may execute
 * concurrently with Core heap storage or distinct caller backing contexts.
 * The caller must serialize executions that share one backing context.
 */
FDB_PAYLOAD_API void fdb_payload_v1_plan_retain(fdb_payload_v1_plan_t* plan);
FDB_PAYLOAD_API void fdb_payload_v1_plan_release(fdb_payload_v1_plan_t* plan);
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_plan_info(
    const fdb_payload_v1_plan_t* plan,
    fdb_payload_v1_plan_info_t* out_info,
    fdb_payload_v1_error_t** out_error);
/*
 * Compiles the borrowed source byte span before returning. A null source is
 * valid only when source_size is zero. A null options pointer selects V1
 * defaults. A supplied options structure must declare at least the V1 prefix;
 * a larger future tail is ignored. On success, out_spec receives one owned,
 * immutable, thread-safe handle.
 */
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_spec_compile_json(
    const uint8_t* source,
    uint64_t source_size,
    const fdb_payload_v1_compile_options_t* options,
    fdb_payload_v1_spec_t** out_spec,
    fdb_payload_v1_error_t** out_error);
/* Null is accepted. Each retain owns one matching release. */
FDB_PAYLOAD_API void fdb_payload_v1_spec_retain(fdb_payload_v1_spec_t* spec);
FDB_PAYLOAD_API void fdb_payload_v1_spec_release(fdb_payload_v1_spec_t* spec);
/*
 * Immutable spec queries are thread-safe. Each blob output is a fresh owned
 * handle whose bytes remain valid independently of the spec. Digest, profile,
 * capability, count, and index outputs are copied. A capabilities structure
 * must declare at least the V1 prefix; only that prefix is written and a
 * larger future tail is preserved.
 */
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_spec_canonical_json(
    const fdb_payload_v1_spec_t* spec,
    fdb_payload_v1_blob_t** out_blob,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_spec_sha256(
    const fdb_payload_v1_spec_t* spec,
    uint8_t out_digest[FDB_PAYLOAD_V1_SHA256_SIZE],
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_spec_manifest_json(
    const fdb_payload_v1_spec_t* spec,
    fdb_payload_v1_blob_t** out_blob,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_spec_profile(
    const fdb_payload_v1_spec_t* spec,
    fdb_payload_v1_profile_t* out_profile,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_spec_capabilities(
    const fdb_payload_v1_spec_t* spec,
    fdb_payload_v1_capabilities_t* out_capabilities,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_spec_entry_count(
    const fdb_payload_v1_spec_t* spec,
    uint32_t* out_count,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_spec_entry_id(
    const fdb_payload_v1_spec_t* spec,
    uint32_t entry_index,
    fdb_payload_v1_blob_t** out_id,
    fdb_payload_v1_error_t** out_error);
/* ID bytes are borrowed only for the duration of the call. */
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_spec_entry_index(
    const fdb_payload_v1_spec_t* spec,
    const uint8_t* id,
    uint64_t id_size,
    uint32_t* out_entry_index,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_spec_component_count(
    const fdb_payload_v1_spec_t* spec,
    uint32_t* out_count,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_spec_component_id(
    const fdb_payload_v1_spec_t* spec,
    uint32_t component_index,
    fdb_payload_v1_blob_t** out_id,
    fdb_payload_v1_error_t** out_error);
/* ID bytes are borrowed only for the duration of the call. */
FDB_PAYLOAD_API fdb_payload_v1_status_t fdb_payload_v1_spec_component_index(
    const fdb_payload_v1_spec_t* spec,
    const uint8_t* id,
    uint64_t id_size,
    uint32_t* out_component_index,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t
fdb_payload_v1_spec_component_field_count(
    const fdb_payload_v1_spec_t* spec,
    uint32_t component_index,
    uint32_t* out_count,
    fdb_payload_v1_error_t** out_error);
FDB_PAYLOAD_API fdb_payload_v1_status_t
fdb_payload_v1_spec_component_field_id(
    const fdb_payload_v1_spec_t* spec,
    uint32_t component_index,
    uint32_t field_index,
    fdb_payload_v1_blob_t** out_id,
    fdb_payload_v1_error_t** out_error);
/* ID bytes are borrowed only for the duration of the call. */
FDB_PAYLOAD_API fdb_payload_v1_status_t
fdb_payload_v1_spec_component_field_index(
    const fdb_payload_v1_spec_t* spec,
    uint32_t component_index,
    const uint8_t* id,
    uint64_t id_size,
    uint32_t* out_field_index,
    fdb_payload_v1_error_t** out_error);